FCREPO-598 - use -Djava.endorsed.dirs="%FEDORA_HOME%\client\lib" in compile - same for run, also add: -Dorg.apache.commons.logging.LogFactory=org.apache.commons.logging.impl.Log4jFactory -Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4jLoggerr